--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,14 @@ header .main-container .dish-box .dish1{
   
   
   }
+
+
+  @media only screen and (max-width:1077px){
+    header .main-container .content-box p{
+        width:330px
+    }
+    header .main-container .content-box .menu img{
+        width:70px;
+        height:50px;
+    }
+  }
