--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,138 @@ header .main-container .dish-box .dish1{
     }
     header .main-container .content-box .menu img{
         width:70px;
-        height:50px;
+        height:50px;    
     }
-  }
+}
+@media only screen and (max-width: 1000px){
+        header .main-container .content-box h3{
+            font-size: 15px;
+        }
+        header .main-container .content-box h1{
+            font-size: 25px;
+        }
+        header .main-container .content-box p{
+            width:260px
+        }
+
+        header .main-container .dish-box .dish1{
+            width: 320px;
+            height: 330px;
+            top: 17px;
+        }
+        header .main-container .content-box .menu img{
+            width:70px;
+            height: 50px;
+            padding-right: 10px;
+        }
+    }
+    @media only screen and (max-width: 842px){
+        header .main-container .content-box p{
+            width:210px
+        }
+
+        header .main-container .dish-box .dish1{
+            width: 260px;
+            height: 280px;
+            top: 50px;
+        }
+        header .main-container .content-box .menu img{
+            width:50px;
+            height: 40px;
+
+        }
+    }
+
+    @media only screen and (max-width: 700px){
+        header .bg{
+            width: 200%;
+        }
+        header nav li{
+            padding-left: 20px;
+        }
+        header .main-container{
+            flex-wrap: wrap-reverse;
+        }
+        header .main-container .content-box, .dish-box{
+            width: 100%;
+        }
+        header .main-container .content-box{
+            height: 60%;
+            padding-left: 27px;
+        }
+        header .main-container .dish-box{
+            height: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        header .main-container .dish-box .dish1{
+            width: 155px;
+            height: 155px;
+            position: unset;
+        }
+        header .main-container .content-box h1{
+            font-size: 23px;
+        }
+        header .main-container .content-box p{
+            height: 92%;
+            font-size: 12px;
+        }
+        header .main-container .content-box .menu{
+            width: 100%;
+            height: 30%;
+            padding-top: 10px;
+        }
+    }
+    @media screen and (max-width:441px) {
+        header nav li{
+            padding-left: 12px;
+        }
+        header .main-container .content-box p{
+            height: 50px;
+            overflow: hidden;
+        }
+        header .main-container .content-box .menu img:hover{
+            width: 70px;
+            height: 50px;
+        }
+        header .main-container .content-box .menu{
+            width: 100%;
+            height: 30%;
+            padding-top: 10px;
+        }
+    }
+
+    @media screen and (max-width:350px){
+        header nav li{
+            padding-left: 9px;
+
+        }
+        header nav li a{
+            padding-left: 10px;
+        }
+        header .content-box{
+            overflow: hidden;
+        }
+        header .main-container .content-box h3{
+            font-size: 13px;
+        }
+        header .main-container .content-box h1{
+            font-size: 17px;
+        }
+        header .main-container .content-box button{
+            width: 120px;
+            padding: 6px 10px;
+        }
+        header .main-container .content-box .menu img{
+            width: 35px;
+            height: 25px;
+        }
+        header .main-container .dish-box .dish-box{
+            width: 10px;
+            height: 10px;
+            position: unset;
+        }
+        
+    }
+  
